--- a/index.html
+++ b/index.html
@@ -6,122 +6,148 @@
   <title>PrimeZilla — Eletrônicos & Variedades</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    /* ======== ESTILO IDÊNTICO À ABA PRODUTOS ======== */
+<style>
+/* ======== ESTILO MODELO LIFEPOD ======== */
+body {
+  background: #0a0a0a;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-    body {
-      background: #07131c;
-      color: #e6f7ff;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+/* TOPO */
+.topo {
+  background: #111;
+  border-bottom: 1px solid #222;
+  padding: 12px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  height: 50px;
+}
+.nav a {
+  color: #ccc;
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: 500;
+}
+.nav a:hover,
+.nav .ativo {
+  color: #00d4ff;
+}
 
-    .topo {
-      background: #0b2230;
-      padding: 12px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid #0f2d40;
-    }
+/* HERO */
+.hero {
+  background: linear-gradient(180deg, #00d4ff10, #000);
+  padding: 60px 20px;
+  text-align: center;
+}
+.hero h1 {
+  font-size: 42px;
+  color: #00d4ff;
+  text-transform: uppercase;
+}
+.hero p {
+  color: #ccc;
+  font-size: 18px;
+  margin-top: 8px;
+}
 
-    .logo { height: 60px; }
+/* CONTAINER */
+.container {
+  padding: 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+}
 
-    .nav a {
-      color: #c9ecff;
-      margin-left: 12px;
-      text-decoration: none;
-      font-weight: 600;
-    }
+/* GRADE */
+.grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+}
 
-    .nav a:hover {
-      color: #00d4ff;
-    }
+/* CARD ESTILO PRODUTOS */
+.card {
+  background: #141414;
+  border-radius: 14px;
+  padding: 16px;
+  transition: .2s;
+  border: 1px solid #1f1f1f;
+}
+.card:hover {
+  transform: scale(1.02);
+  border-color: #00d4ff;
+}
+.card .media img {
+  width: 100%;
+  height: 230px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+.card .info h3 {
+  margin: 10px 0 6px;
+  font-size: 20px;
+}
+.price {
+  color: #00d4ff;
+  font-size: 18px;
+  font-weight: bold;
+}
 
-    /* HERO escura combinando com o resto */
-    .hero {
-      background: linear-gradient(90deg, #002637, #00384f);
-      padding: 40px 20px;
-      text-align: center;
-      border-bottom: 2px solid #0f2d40;
-    }
+/* CONTROLES */
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+label {
+  font-size: 14px;
+  color: #ddd;
+}
+select {
+  background: #0d0d0d;
+  border: 1px solid #333;
+  color: #fff;
+  padding: 8px;
+  border-radius: 6px;
+  margin-top: 4px;
+}
 
-    .hero h1 {
-      margin: 0;
-      font-size: 42px;
-      color: #00d4ff;
-    }
+/* BOTÃO */
+.btnBuy {
+  background: linear-gradient(90deg, #00d4ff, #007ac1);
+  color: #000;
+  font-weight: bold;
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  transition: .2s;
+}
+.btnBuy:hover {
+  filter: brightness(1.2);
+}
 
-    .hero p {
-      color: #c9ecff;
-      margin-top: 10px;
-      font-size: 18px;
-    }
-
-    .container {
-      padding: 20px;
-    }
-
-    h2 { color: #00d4ff; }
-
-    /* GRID igual produtos */
-    .grid {
-      display: grid;
-      gap: 12px;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    }
-
-    /* CARD igualzinho a aba produtos */
-    .card {
-      background: #0b2230;
-      border-radius: 8px;
-      padding: 10px;
-      color: #e6f7ff;
-      display: flex;
-      gap: 10px;
-      align-items: flex-start;
-      border: 1px solid #0f2d40;
-    }
-
-    .card .media img {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-
-    .price {
-      font-weight: 700;
-      margin: 6px 0;
-    }
-
-    /* Botão igual produtos */
-    .btnBuy {
-      background: linear-gradient(90deg, #00d4ff, #007ac1);
-      color: #001826;
-      padding: 8px;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .btnBuy:hover {
-      opacity: 0.9;
-    }
-
-    .footer {
-      background: #0b2230;
-      padding: 20px;
-      text-align: center;
-      border-top: 2px solid #0f2d40;
-      color: #6bc8ff;
-      margin-top: 30px;
-    }
-  </style>
+/* RODAPÉ */
+.footer {
+  text-align: center;
+  padding: 20px;
+  color: #777;
+  margin-top: 40px;
+  border-top: 1px solid #111;
+}
+</style>
 </head>
-<body>
 
+<body>
 <header class="topo">
   <div class="brand">
     <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo" alt="PrimeZilla">
@@ -135,10 +161,8 @@
 </header>
 
 <section class="hero">
-  <div class="hero-inner">
-    <h1>PrimeZilla</h1>
-    <p>Eletrônicos & Variedades — entrega rápida em Jardim e Guia Lopes</p>
-  </div>
+  <h1>PrimeZilla</h1>
+  <p>Eletrônicos & Variedades — entrega rápida em Jardim e Guia Lopes</p>
 </section>
 
 <main class="container">
@@ -151,6 +175,8 @@
 <footer class="footer">
   © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
 </footer>
+
+<script type="module" src="script.js"></script>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
@@ -169,10 +195,8 @@
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  function esc(s) {
-    return String(s||'').replace(/[&<>"']/g,m=>(
-      {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]
-    ));
+  function esc(s){
+    return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
 
   document.addEventListener('DOMContentLoaded', ()=>{
@@ -187,38 +211,52 @@
         if(!p.active) return;
 
         const img = p.imageUrl || p.image || 'placeholder.png';
-        const priceText = p.price
-          ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}`
-          : 'Consultar valores';
+        const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
 
         const card = document.createElement('div');
-        card.className = 'card';
+        card.className='card';
 
         card.innerHTML = `
           <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
           <div class="info">
             <h3>${esc(p.name)}</h3>
             <p class="price">${esc(priceText)}</p>
-            <button class="btnBuy">Comprar (WhatsApp)</button>
+            <div class="controls">
+              <label>Quantidade
+                <select class="qty"><option>1</option><option>2</option><option>3</option></select>
+              </label>
+              <label>${p.type==='pod' ? 'Sabor' : 'Cor'}
+                <select class="variant">
+                  ${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}
+                </select>
+              </label>
+              <label>Pagamento
+                <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
+              </label>
+              <button class="btnBuy">Comprar (WhatsApp)</button>
+            </div>
           </div>
         `;
 
         card.querySelector('.btnBuy').addEventListener('click', ()=>{
+          const qtd = card.querySelector('.qty').value;
+          const variant = card.querySelector('.variant').value || '-';
+          const pay = card.querySelector('.pay').value;
+          const label = p.type==='pod' ? 'Sabor' : 'Cor';
+
           const text = encodeURIComponent(
-            `Olá! Tenho interesse no produto: ${p.name}\nValor: ${priceText}`
+            `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${variant}\nPagamento: ${pay}`
           );
-          window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
+
+          window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
         });
 
         grid.appendChild(card);
       });
 
-      if(grid.innerHTML === '') {
-        grid.innerHTML = '<p>Nenhum produto disponível.</p>';
-      }
+      if(grid.innerHTML==='') grid.innerHTML = '<p>Nenhum produto disponível.</p>';
     });
   });
 </script>
-
 </body>
 </html>
