--- a/contato.html
+++ b/contato.html
@@ -5,23 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contato — PrimeZilla</title>
   <link rel="stylesheet" href="style.css">
-
   <style>
   /* ======== ESTILO IGUAL ABA PRODUTOS ======== */
-
+  
   body {
     background: #0a0a0a;
     color: #fff;
     font-family: "Inter", sans-serif;
   }
+
   .container {
     padding: 20px;
-    max-width: 900px;
+    max-width: 1100px;
     margin: auto;
   }
+
   h2 {
     font-size: 26px;
     margin-bottom: 16px;
+  }
+
+  p {
+    font-size: 18px;
+    color: #ccc;
+    margin-bottom: 20px;
   }
 
   /* Botão estilo produtos */
@@ -35,18 +42,13 @@
     cursor: pointer;
     font-size: 18px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 10px;
     transition: .2s;
-    text-align: center;
     text-decoration: none;
+    text-align: center;
   }
   .botao:hover {
     filter: brightness(1.2);
-  }
-
-  p {
-    font-size: 18px;
-    color: #ccc;
   }
 
   </style>
@@ -58,7 +60,6 @@
     <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago"
          class="logo" alt="PrimeZilla">
   </div>
-
   <nav class="nav">
     <a href="index.html">Início</a>
     <a href="produtos.html">Produtos</a>
