--- a/contato.html
+++ b/contato.html
@@ -5,15 +5,41 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contato — PrimeZilla</title>
   <link rel="stylesheet" href="style.css">
+
   <style>
-  /* ======== ESTILO IGUAL ABA PRODUTOS ======== */
-  
+  /* ======== ESTILO IGUAL INDEX ======== */
   body {
     background: #0a0a0a;
     color: #fff;
     font-family: "Inter", sans-serif;
+    margin: 0;
+    padding: 0;
   }
 
+  /* topo igual index */
+  .topo {
+    background: #111;
+    border-bottom: 1px solid #222;
+    padding: 12px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .logo {
+    height: 50px;
+  }
+  .nav a {
+    color: #ccc;
+    margin-left: 20px;
+    text-decoration: none;
+    font-weight: 500;
+  }
+  .nav a:hover,
+  .nav .ativo {
+    color: #00d4ff;
+  }
+
+  /* container igual index */
   .container {
     padding: 20px;
     max-width: 1100px;
@@ -22,16 +48,15 @@
 
   h2 {
     font-size: 26px;
-    margin-bottom: 16px;
-  }
-
-  p {
-    font-size: 18px;
-    color: #ccc;
     margin-bottom: 20px;
   }
 
-  /* Botão estilo produtos */
+  p {
+    color: #ccc;
+    font-size: 18px;
+  }
+
+  /* botão igual index (btnBuy → botao) */
   .botao {
     background: linear-gradient(90deg, #00d4ff, #007ac1);
     color: #000;
@@ -42,7 +67,7 @@
     cursor: pointer;
     font-size: 18px;
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 20px;
     transition: .2s;
     text-decoration: none;
     text-align: center;
@@ -51,8 +76,17 @@
     filter: brightness(1.2);
   }
 
+  /* rodapé igual index */
+  .footer {
+    text-align: center;
+    padding: 20px;
+    color: #777;
+    margin-top: 40px;
+    border-top: 1px solid #111;
+  }
   </style>
 </head>
+
 <body>
 
 <header class="topo">
@@ -60,6 +94,7 @@
     <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago"
          class="logo" alt="PrimeZilla">
   </div>
+
   <nav class="nav">
     <a href="index.html">Início</a>
     <a href="produtos.html">Produtos</a>
